<resources>
    <string name="app_name">cemilanRaos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="logo">Cemilan Raos</string>
    <string name="bawahlogo">Dont worry we are here to give\n the best to save your hunger\n problem</string>
    <string name="signin">Sign In</string>
    <string name="register">Register</string>
    <string name="fullname">Full Name</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_more">view more</string>
    <string name="your_favorite_and_tasty_food_is_here">your favorite and tasty food is here!</string>
    <string name="make_order">Make Order</string>
    <string name="my_cart">My Cart</string>
</resources>